# instaloader_mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp_fetch_instagram.py  mcp_test_urls.sh  pyproject.toml
openspec/: project.md
openspec/changes/add-instaloader-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/add-instaloader-mcp-server/specs/docker-containerization/: spec.md
openspec/changes/add-instaloader-mcp-server/specs/documentation/: spec.md
openspec/changes/add-instaloader-mcp-server/specs/instaloader-integration/: spec.md
openspec/changes/add-instaloader-mcp-server/specs/mcp-server/: spec.md
openspec/changes/add-instaloader-mcp-server/specs/testing/: spec.md
openspec/changes/add-instaloader-mcp-server/specs/update-checking/: spec.md
openspec/changes/archive/2026-02-05-code-quality-improvements/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-05-code-quality-improvements/specs/enhanced-error-messages/: spec.md
openspec/changes/archive/2026-02-05-code-quality-improvements/specs/session-loading/: spec.md
openspec/changes/archive/2026-02-05-code-quality-improvements/specs/update-checker-tests/: spec.md
openspec/specs/enhanced-error-messages/: spec.md
openspec/specs/session-loading/: spec.md
openspec/specs/update-checker-tests/: spec.md
src/: __init__.py  instaloader_client.py  rate_limiter.py  server.py  update_checker.py  url_parser.py
tests/: example_urls.txt  test_instaloader_client.py  test_integration.py  test_mcp_tools.py  test_rate_limiter.py  test_update_checker.py  test_url_parser.py
